Fix spacing

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 }
 
 .player-selection {
-    margin-top: 30px;
+    margin-top: 8px;
 
     height: 150px;
     background-color: #5D3F64;
@@ -75,7 +75,7 @@ body {
 }
 
 .current-choices {
-    margin-top: 30px;
+    margin-top: 8px;
 
     height: 200px;
     background-color: #5D3F64;
@@ -110,14 +110,14 @@ body {
 }
 
 .round-result {
-    margin-top: 30px;
+    /* margin-top: 30px; */
 
     background-color: #5D3F64;
     text-align: center;
 }
 
 .score-board {
-    margin-top: 30px;
+    /* margin-top: 30px; */
 
     background-color: #5D3F64;
     display: flex;
@@ -135,11 +135,14 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
+
 }
 
 .score-board .number {
     height: 60px;
     width: 200px;
+    border-radius: 12px;
 
     background-color: #402b45;
     display: flex;
@@ -148,7 +151,7 @@ body {
 }
 
 .game-result{
-    margin-top: 30px;
+    margin-top: 8px;
 
     height: 100px;
     background-color: #5D3F64;
